this should create the html files

--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ collections:
     permalink: /nieuwsbrief/:title/
   dynamic:
     output: true
-    permalink: /agenda/:title/
+    permalink: /dynamic/:title/
